Bug 1253959 - Per comment 10, #ifdef code that causes ReadMetadata() to fail on Windows XP debug. r=cpearce, a=lizzard

MozReview-Commit-ID: J6Muv6pJJhf