dom/media/directshow/DirectShowReader.h
@@ -13,6 +13,12 @@
 #include "mozilla/RefPtr.h"
 #include "MP3FrameParser.h"
 
+// Add the graph to the Running Object Table so that we can connect
+// to this graph with GraphEdit/GraphStudio. Note: on Vista and up you must
+// also regsvr32 proppage.dll from the Windows SDK.
+// See: http://msdn.microsoft.com/en-us/library/ms787252(VS.85).aspx
+// #define DIRECTSHOW_REGISTER_GRAPH
+
 struct IGraphBuilder;
 struct IMediaControl;
 struct IMediaSeeking;
@@ -83,7 +89,7 @@ private:
   // the MP3 frames to get a more accuate estimate of the duration.
   MP3FrameParser mMP3FrameParser;
 
-#ifdef DEBUG
+#ifdef DIRECTSHOW_REGISTER_GRAPH
   // Used to add/remove the filter graph to the Running Object Table. You can
   // connect GraphEdit/GraphStudio to the graph to observe and/or debug its
   // topology and state.
